Changed the logo font size unit to pixels preventing caption wrap around to a new line.

--- a/seattlegeni/website/html/media/css/common.css
+++ b/seattlegeni/website/html/media/css/common.css
@@ -80,7 +80,7 @@ code {
 }
 
 #header #logo {
-    font-size: 36pt;
+    font-size: 42px;  /* Edited Sept 28, 2012  prev value :36pt*/
     font-weight: bold;
 }
 
